# rules_js

./: .bazelignore  .prettierignore  pnpm-lock.yaml  pnpm-workspace.yaml
e2e/pnpm_workspace/: package.json  pnpm-lock.yaml
e2e/pnpm_workspace_dot_dot/app/a/: package.json
e2e/pnpm_workspace_dot_dot/app/b/: package.json
e2e/pnpm_workspace_dot_dot/root/: pnpm-lock.yaml
js/private/: js_library.bzl
js/private/coverage/bundle/: BUILD.bazel
js/private/node-patches/: fs.js
js/private/node-patches/src/: fs.ts
js/private/test/node-patches/: realpath.js
npm/private/: npm_translate_lock.bzl
npm/private/test/: defs_checked.bzl  repositories_checked.bzl
