load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm__rollup__2.75.7//js/private/coverage/bundle:package_json.bzl", "rollup")

npm_link_all_packages(name = "node_modules")

rollup(
    name = "bundle",
    srcs = [
        "c8.js",
        "rollup.config.js",
        ":node_modules/@rollup/plugin-commonjs",
        ":node_modules/@rollup/plugin-json",
        ":node_modules/@rollup/plugin-node-resolve",
        ":node_modules/c8",
    ],
    outs = [
        "bundle.js",
    ],
    args = [
        "c8.js",
        "--config",
        "rollup.config.js",
        "--format",
        "cjs",
        "--file",
        "bundle.js",
    ],
    chdir = package_name(),
    tags = ["manual"],
    visibility = ["//js/private/coverage:__pkg__"],
)
